# reef

./: .SRCINFO  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  bash_reference.sh  flake.nix
fish/: install.fish
fish/conf.d/: reef-tools.fish  reef.fish
fish/functions/: declare.fish  export.fish  fish_command_not_found.fish  local.fish  readonly.fish  shopt.fish  source.fish  unset.fish
fish/functions/tools/: cat.fish  du.fish  find.fish  grep.fish  ls.fish  ps.fish  sed.fish
pkg/deb/: changelog  control  copyright  rules
pkg/homebrew/: reef.rb
pkg/nix/: flake.nix
pkg/rpm/: reef.spec
src/: ast.rs  daemon.rs  detect.rs  env_diff.rs  lexer.rs  lib.rs  main.rs  parser.rs  passthrough.rs  patterns.rs  state.rs  translate.rs
tests/: edge_cases.fish  reef_results.txt  reef_test_suite.sh  test_detect.rs  test_translate.rs
