[package]
name = "reef"
version = "0.3.0"
edition = "2024"
description = "Bash compatibility layer for fish shell"
license = "MIT"
repository = "https://github.com/ZStud/reef"
homepage = "https://github.com/ZStud/reef"
readme = "README.md"
keywords = ["fish", "bash", "shell", "translator", "compatibility"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "fish/",
    "tests/",
    "PKGBUILD",
    ".SRCINFO",
    "pkg/",
]

[dependencies]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
